# medtraductor

./: Makefile
.config/: setSecrets.sh  setSecrets_front.sh
db/: .debug.sql  functions.sql  load.sql  tables.sql
docs/: medTraductorDB_v0.1.excalidraw
front/: Makefile
front/medtraductor/: index.html  package-lock.json  package.json
front/medtraductor/src/: App.tsx  main.tsx
front/medtraductor/src/components/errors/: ErrorPage.tsx
front/medtraductor/src/components/header/: Header.tsx  Navbar.tsx  NavbarOffCanvas.tsx  NavbarOffCanvasFooter.tsx  NavbarOffCanvasItem.tsx
front/medtraductor/src/components/loading/: Loading.tsx
front/medtraductor/src/components/profile/: Profile.tsx
front/medtraductor/src/components/questionDetail/: Answer.tsx  Answers.tsx  Content.tsx  ContentMetadata.tsx  ContentPoints.tsx  Question.tsx
front/medtraductor/src/components/router/: SaveUrlAndRedirect.tsx
front/medtraductor/src/context/: UserProvider.tsx
front/medtraductor/src/hooks/: googleAuth.ts  questionBrowser.ts  restContent.ts
front/medtraductor/src/model/: QuestionModel.ts  serverModels.ts
front/medtraductor/src/rest/: APIManager.ts  ApiHeaders.ts  ApiMethod.ts  RestManager.ts
server/medtraductor/: Cargo.toml  Dockerfile  Makefile
server/medtraductor/src/: constants.rs  main.rs
server/medtraductor/src/api/: dbquery.rs  mod.rs  question_detail.rs
server/medtraductor/src/config/: config.rs  cors.rs  mod.rs  route_error.rs
server/medtraductor/src/model/: dbquery_model.rs  mod.rs  uuid_wrapper.rs
server/medtraductor/src/utils/: mod.rs
(+17 files in other folders)
