[package]
name = "medtraductor"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.3", features = [ "json" ] }
serde = { version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1","with-chrono-0_4"] }
uuid = { version = "1.4.1", features = ["serde", "v4"]}

